# scpi_controller

./: .gitmodules  CMakeLists.txt
source/: CMakeLists.txt  FreeRTOSConfig.h  scpi_controller.c
source/gpio/: gpio_utils.c  gpio_utils.h
source/scpi/: scpi-def.c  scpi-def.h
source/uart/: uart_task.c  uart_task.h
